# Ibadah

./: .gitignore  build.py
HorrorGameCXX/Dev/: CMakeLists.txt  GDExtension.cpp
HorrorGameCXX/Dev/InputProcessor/: InputProcessor.cpp  InputProcessor.h
HorrorGameCXX/Dev/Maps/Home/HomeMapLoader/: HomeMapLoader.cpp  HomeMapLoader.h
HorrorGameCXX/Dev/Scenes/Home/: Home.cpp  Home.h
HorrorGameCXX/Dev/Scenes/Home/HomeMapLoader/: HomeMapLoader.cpp  HomeMapLoader.h
HorrorGameCXX/Dev/Scenes/MainScene/: Main.cpp  Main.h
HorrorGameCXX/Dev/Scenes/MainScene/HomeMapLoader/: HomeMapLoader.cpp  HomeMapLoader.h
HorrorGameGD/: CXX_Extension.gdextension  CXX_Extension.gdextension.uid  project.godot
HorrorGameGD/Assets/: LowPolyHuman.obj.import
HorrorGameGD/Assets/Duck/: duck.obj.import  duck_final.blend
HorrorGameGD/Assets/Duck/texture/: Duck_Base_color.png.import
HorrorGameGD/Scenes/: Home.tscn
HorrorGameGD/Scenes/Characters/: character_1.tscn
HorrorGameGD/Scenes/Maps/: Home.tscn
IbadahCXX/Dev/: CMakeLists.txt  GDExtension.cpp  GDExtension.h
IbadahCXX/Dev/InputHandler/: InputHandler.cpp  InputHandler.h
IbadahCXX/Dev/InputLogger/: InputLogger.cpp  InputLogger.h
IbadahCXX/Dev/Player/: Player.cpp  Player.h
IbadahCXX/Dev/Scenes/Main/: Main.cpp  Main.h
IbadahGD/: CXX_Extension.gdextension  project.godot
IbadahGD/Assets/Characters/: LowPolyHuman.obj.import
IbadahGD/Assets/Characters/Duck/: duck.obj.import
IbadahGD/Assets/MapObjects/ModularStreet/: license.txt  scene.gltf  (+1 more)
IbadahGD/Scenes/: Main.tscn
IbadahGD/Scenes/Characters/: Duck.tscn  duck.tscn
(+7 files in other folders)
